# srrg2_apriltag_calibration

./: .gitignore  CMakeLists.txt  LICENSE  package.xml  readme.md
app/: CMakeLists.txt  app_extrinsic_visualization.cpp  app_image_dumper.cpp  app_offline_calibration.cpp  test_lidar_camera_projection.cpp
configurations/: config_ipb_car_flir_os1-64.json  extrinsic_ipb_car_flir_os1-64_conference_room_00.txt
src/: CMakeLists.txt
src/apriltag3/: CMakeLists.txt
src/srrg_apriltag_calibration/: CMakeLists.txt  apriltag_calibrator.h  apriltag_calibrator.hpp  instances.cpp  instances.h
src/srrg_apriltag_detection/: CMakeLists.txt  apriltag.h  apriltag.hpp  apriltag_detector.h  apriltag_detector.hpp  instances.cpp  instances.h
src/srrg_apriltag_utils/: utilities.h
tests/: CMakeLists.txt  fixtures.hpp  test_detector.cpp
