<?xml version="1.0"?>
<package format="2">
  <name>srrg2_apriltag_calibration</name>
  <version>1.0.0</version>
  <description>The srrg2_apriltag_calibration package</description>

  <maintainer email="ialoise@diag.uniroma1.it">Irvin Aloise</maintainer>

  <license>BSD-4</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>srrg_cmake_modules</depend>
  <depend>srrg2_core</depend>
  <depend>srrg2_core_ros</depend>
  <depend>srrg2_solver</depend>
  <depend>srrg2_qgl_viewport</depend>

</package>
